Cycles Baking - Branched path tracing sample values have no effect #40135

Closed
opened 2014-05-11 08:18:00 +02:00 by Matt Heimlich · 11 comments

System Information
Win 7 64-bit

Blender Version
8904eaf

Short description of error
Branched Path Tracing sample values do not contribute to sample quality of bakes. Only AA samples or straight path tracing.

Exact steps for others to reproduce the error
Try to bake with BPT

**System Information** Win 7 64-bit **Blender Version** 8904eaf **Short description of error** Branched Path Tracing sample values do not contribute to sample quality of bakes. Only AA samples or straight path tracing. **Exact steps for others to reproduce the error** Try to bake with BPT
Author

Changed status to: 'Open'

Changed status to: 'Open'
Dalai Felinto was assigned by Matt Heimlich 2014-05-11 08:18:00 +02:00
Author

Added subscriber: @MatthewHeimlich

Added subscriber: @MatthewHeimlich

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Yes, compute_light_pass() only takes AA samples into account now. I am not sure if we should add the complexity here.

Yes, compute_light_pass() only takes AA samples into account now. I am not sure if we should add the complexity here.

@ThomasDinges isn't it only a matter of setting the aa samples of the branched settings instead? (totally unfamiliar with branched from a user or dev point of view)

@ThomasDinges isn't it only a matter of setting the aa samples of the branched settings instead? (totally unfamiliar with branched from a user or dev point of view)

Added subscriber: @brecht

Added subscriber: @brecht

We already use the Branched Path or Path Trace AA samples, that's set inside of kernel_data.integrator.aa_samples.

What Matt means, are the dedicated Diffuse, Glossy, SSS... samples that Branched Path offers. Basically we would need another for() loop inside of the existing one for each Sample Type. I think this is overkill for baking. What do you think @brecht ?

We already use the Branched Path or Path Trace AA samples, that's set inside of kernel_data.integrator.aa_samples. What Matt means, are the dedicated Diffuse, Glossy, SSS... samples that Branched Path offers. Basically we would need another for() loop inside of the existing one for each Sample Type. I think this is overkill for baking. What do you think @brecht ?

Well, it would mean making separate AO, SSS and integrate lighting functions for branched path and calling them, just like has been done for regular path tracing already.

I think that can work fine, add some if/else to check for the branched case and call the appropriate functions.

Well, it would mean making separate AO, SSS and integrate lighting functions for branched path and calling them, just like has been done for regular path tracing already. I think that can work fine, add some if/else to check for the branched case and call the appropriate functions.

This issue was referenced by db2d900f74

This issue was referenced by db2d900f74b5e7e127999faedd1b1e6f2d9db363

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit db2d900f74.

Closed by commit db2d900f74.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40135
No description provided.