Fix T40135: cycles baking did not support branched path settings yet.